z-index fix

--- a/youthgetinspired/css/lead.scss
+++ b/youthgetinspired/css/lead.scss
@@ -113,7 +113,7 @@
     padding: 0;
     max-height: 80vh;
     text-transform: uppercase;
-    z-index: 1001;
+    z-index: 10001;
     text-align: left;
     border-color: #000;
     transform: translateY(-40%);
